Bug fix-1704222, fix-1707717, reduced transparency for dialog, fix-1705143 Extended Lightwave UI to support Microsoft Edge 25, EdgeHTML 13.1 browser
Change-Id: Ib39da405d43048529f05c7f5cdea025530178b08

--- a/vmidentity/lightwaveui/web/app/app.css
+++ b/vmidentity/lightwaveui/web/app/app.css
@@ -245,7 +245,7 @@ body {
 .popup-style{
   min-width:480px;
   background-color: #313131;
-  opacity: 0.93;
+  opacity: 0.96;
 }
 
 .tooltip-inner{
@@ -432,4 +432,7 @@ body {
 }
 .ng-cloak{
   display: none !important;
+}
+.ngdialog-overlay {
+  pointer-events: none;
 }
