Insert link to directory, redirect to home if not logged in
Change-Id: I06ed60632bde35d84873f577d49670d80e744bcf

--- a/vmidentity/webui/src/app/home.component.html
+++ b/vmidentity/webui/src/app/home.component.html
@@ -25,7 +25,7 @@
     </header>
     <div class="content-container">
         <div class="content-area" [style.max-height.px]="containerHeight" style="overflow-y:hidden;padding:unset;">
-            <vmdir></vmdir>
+            <vmdir *ngIf="displayComponents"></vmdir>
         </div>
     </div>
 </div>
